compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__recursion__not_tco_due_to_assignment.snap
---
source: compiler-core/src/fsharp/tests/recursion.rs
expression: "\npub fn foo(x) {\n  let z = {\n    let y = x\n    foo(y - 1)\n  }\n  z\n}\n"
---
module rec my.``mod``
let foo (x: int) = begin
    let z = begin
        let y = x
        foo (y - 1)
    end
    z
end
