compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__recursion__shadowing_so_not_recursive.snap
---
source: compiler-core/src/fsharp/tests/recursion.rs
expression: "\npub fn map(map) {\n  map()\n}\n"
---
module rec my.``mod``

let map (map: unit -> 'a) = begin
    map()
end
