compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__recursion__tco.snap
---
source: compiler-core/src/fsharp/tests/recursion.rs
assertion_line: 5
expression: "\npub fn main(x) {\n  case x {\n    0 -> Nil\n    _ -> main(x - 1)\n  }\n}\n"
---
module rec my.``mod``
let main (x: int): unit = begin
    match x with
    | 0 ->
        ()
    | _ ->
        main (x - 1)
end
