compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__recursion__tco_case_block.snap
---
source: compiler-core/src/fsharp/tests/recursion.rs
expression: "\npub fn foo(x) {\n  case x {\n    0 -> Nil\n    _ -> {\n      let y = x\n      foo(y - 1)\n    }\n  }\n}\n"
---
module rec my.``mod``
let foo (x: int64) = begin
    match x with
    | 0L ->
        ()
    | _ ->
        let y = x
        foo (y - 1L)
end
